<resources>
    <string name="app_name" translatable="false">Inventory</string>
    <string name="txvSignIn">Aceder</string>
    <string name="txvPassword">Contraseña</string>
    <string name="txvUser">Usuario</string>
    <string name="chkRemenber">Recordarme</string>
    <string name="txvSignup">Registrarse</string>
    <string name="btnGoogleSignIn" translatable="false">Google</string>
    <string name="btnFacebookSignIn" translatable="false">Facebook</string>
    <string name="txvName">Nombre</string>
    <string name="txvDescripcion">Descripción</string>
    <string name="btnChange">Cambio De Estado</string>
    <string name="txvCreationDate">Creacion de fecha</string>


    <string name="txtV_Nombre">Nombre</string>
    <string name="txtV_Serial">Serial</string>
    <string name="txtV_Vendor">Vendedor</string>
    <string name="txtV_Modelo">Modelo</string>
    <string name="txtV_Categoria">Categoria</string>
    <string name="txtV_Subcategoria">Subcategoria</string>
    <string name="txtV_Tipo">Tipo</string>
    <string name="txtV_DescProducto">Descripcion</string>
    <string name="txtV_Precio">Precio</string>
    <string name="txtV_FechaCompra">Fecha de compra</string>
    <string name="txtV_URL">URL</string>
    <string name="txtV_Notas">Notas</string>
    <string name="default_text">Defecto</string>
    <string name="action_save">Titulo</string>
    <string name="action_general_setting" translatable="false">General</string>
    <string name="action_account_setting" translatable="false">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_eliminar_listdependency">Eliminar dependencia</string>
    <string name="btnOK" >Ok</string>
    <string name="btnCancel">Cancel</string>
    <string name="byid">ID</string>
    <string name="byshort_name">Short Name</string>

</resources>
